# Neel

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
bot/: bot.cpp  bot.hpp  logindata.hpp  manager.cpp  manager.hpp
connect/: connect.cpp  connect.hpp  logindata.hpp
itemdat/: itemdat.cpp  itemdat.hpp
packet/: data.cpp  data.hpp  handler.cpp  handler.hpp
utils/: binarystreamreader.cpp  binarystreamreader.hpp  hash.hpp  klv.hpp  random.cpp  random.hpp  textparse.hpp
